dm/src/dmc/parser.d


int file_qualify(char **pfilename,int flag,phstring_t pathlist, int *next_path);
void afopen(char *,blklst *,int);
extern (C) FILE *file_openwrite(const(char)* name,const(char)* mode);
void file_iofiles();
int readln();
extern (C) void wrtpos(FILE *);
extern (C) void wrtlst(FILE *);

/* from func.c */
void func_nest(Symbol *);
void func_body(Symbol *);
elem *addlinnum(elem *);
void func_conddtors(elem **pe, SYMIDX sistart, SYMIDX siend);
void func_expadddtors(elem **,SYMIDX,SYMIDX,bool,bool);
void paramtypadj(type **);
void func_noreturnvalue();
elem *func_expr_dtor(int keepresult);
elem *func_expr();

/* getcmd.c */
extern __gshared uint netspawn_flags;
void getcmd(int,char **);
void getcmd_term();

/* init.c */
void datadef(Symbol *);
dt_t **dtnbytes(dt_t **,targ_size_t,const(char)* );
dt_t **dtnzeros(dt_t **pdtend,targ_size_t size);
dt_t **dtxoff(dt_t **pdtend,Symbol *s,targ_size_t offset,tym_t ty);
dt_t **dtcoff(dt_t **pdtend,targ_size_t offset);
void init_common(Symbol *);
Symbol *init_typeinfo_data(type *ptype);
Symbol *init_typeinfo(type *ptype);
elem *init_constructor(Symbol *,type *,list_t,targ_size_t,int,Symbol *);
void init_vtbl(Symbol *,symlist_t,Classsym *,Classsym *);
void init_vbtbl(Symbol *,baseclass_t *,Classsym *,targ_size_t);
void init_sym(Symbol *, elem *);

/* inline.c */
void inline_do(Symbol *sfunc);
bool inline_possible(Symbol *sfunc);

/* msc.c */
void list_hydrate(list_t *plist, void function(void *) hydptr);
void list_dehydrate(list_t *plist, void function(void *) dehydptr);
void list_hydrate_d(list_t *plist);
void list_dehydrate_d(list_t *plist);

// nspace.c
void namespace_definition();
void using_declaration();
Symbol *nspace_search(const(char)* id,Nspacesym *sn);
Symbol *nspace_searchmember(const(char)* id,Nspacesym *sn);
Symbol *nspace_qualify(Nspacesym *sn);
Symbol *nspace_getqual(int);
void nspace_add(void *snv,Symbol *s);
void nspace_addfuncalias(Funcsym *s,Funcsym *s2);
Symbol *using_member_declaration(Classsym *stag);
void scope_push_nspace(Nspacesym *sn);
void nspace_checkEnclosing(Symbol *s);
int nspace_isSame(Symbol *s1, Symbol *s2);

/* nwc.c */
void thunk_hydrate(Thunk **);
void thunk_dehydrate(Thunk **);
void nwc_defaultparams(param_t *,param_t *);
void nwc_musthaveinit(param_t *);
void nwc_addstatic(Symbol *);
void output_func();
void queue_func(Symbol *);
void savesymtab(func_t *f);
void nwc_mustwrite(Symbol *);
void ext_def(int);
type *declar_abstract(type *);
type *new_declarator(type *);
type *ptr_operator(type *);
type *declar_fix(type *,char *);
void fixdeclar(type *);
type *declar(type *,char *,int);
int type_specifier(type **);
int declaration_specifier(type **ptyp_spec, int *pclass, uint *pclassm);
Symbol *id_expression();
elem *declaration(int flag);
int funcdecl(Symbol *,int,int,Declar *);
Symbol *symdecl(char *,type *,SC,param_t *);
void nwc_typematch(type *,type *,Symbol *);
int isexpression();
void nwc_setlinkage(char *,int,mangle_t);
tym_t nwc_declspec();
void parse_static_assert();
type *parse_decltype();

/* struct.c */
type *stunspec(enum_TK tk, Symbol *s, Symbol *stempsym, param_t *template_argument_list);
Classsym * n2_definestruct(char *struct_tag,uint flags,tym_t ptrtype,
        Symbol *stempsym,param_t *template_argument_list,int nestdecl);
void n2_classfriends(Classsym *stag);
int n2_isstruct(Symbol **ps);
void n2_addfunctoclass(Classsym *,Funcsym *,int flags);
void n2_chkexist(Classsym *stag, char *name);
void n2_addmember(Classsym *stag,Symbol *smember);
Symbol *n2_searchmember(Classsym *,const(char)* );
Symbol *struct_searchmember(const(char)* ,Classsym *);
void n2_instantiate_memfunc(Symbol *s);
type *n2_adjfunctype(type *t);
int n2_anypure(list_t);
void n2_genvtbl(Classsym *stag, int sc , int);
void n2_genvbtbl(Classsym *stag, int sc , int);
void n2_creatector(type *tclass);
/*void n2_createdtor(type *tclass);*/
Symbol *n2_createprimdtor(Classsym *stag);
Symbol *n2_createpriminv(Classsym *stag);
Symbol *n2_createscaldeldtor(Classsym *stag);
Symbol *n2_vecctor(Classsym *stag);
Symbol *n2_veccpct(Classsym *stag);
Symbol *n2_vecdtor(Classsym *stag, elem *enelems);
Symbol *n2_delete(Classsym *stag,Symbol *sfunc,uint nelems);
void n2_createopeq(Classsym *stag, int flag);
void n2_lookforcopyctor(Classsym *stag);
int n2_iscopyctor(Symbol *scpct);
void n2_createcopyctor(Classsym *stag, int flag);
char *n2_genident ();
Symbol *nwc_genthunk(Symbol *s, targ_size_t d, int i, targ_size_t d2);
type *enumspec();
int type_covariant(type *t1, type *t2);

/* ph.c */
extern __gshared char *ph_directory;              /* directory to read PH files from      */
version (MARS)
{
    void ph_init();
}
else
{
    void ph_init(void *, uint reservesize);
}
void ph_term();
void ph_comdef(Symbol *);
void ph_testautowrite();
void ph_autowrite();
void ph_write(const(char)* ,int);
void ph_auto();
int ph_read(char *filename);
int ph_autoread(char *filename);
void *ph_malloc(size_t nbytes);
void *ph_calloc(size_t nbytes);
void ph_free(void *p);
void *ph_realloc(void *p , size_t nbytes);
void ph_add_global_symdef(Symbol *s, uint sctype);

/* pragma.c */
int pragma_search(const(char)* id);
macro_t *macfind();
macro_t *macdefined(const(char)* id, uint hash);
//void listident();
char *filename_stringize(char *name);
ubyte *macro_predefined(macro_t *m);
int macprocess(macro_t *m, phstring_t *pargs, BlklstSave *blsave);
void pragma_include(char *filename,int flag);
void pragma_init();
//void pragma_term();
macro_t *defmac(const(char)* name , const(char)* text);
void definedmac();
macro_t *fixeddefmac(const(char)* name , const(char)* text);
macro_t *defkwd(const(char)* name , enum_TK val);
void macro_freelist(macro_t *m);
int pragma_defined();
void macro_print(macro_t *m);
void macrotext_print(char *p);

void pragma_hydrate_macdefs(macro_t **pmb,int flag);
void pragma_dehydrate_macdefs(macro_t **pm);

void *pragma_dehydrate();
void pragma_hydrate(macro_t **pmactabroot);

// rtti.c
Classsym *rtti_typeinfo();
elem *rtti_cast(enum_TK,elem *,type *);
elem *rtti_typeid(type *,elem *);

/* symbol.c */
Symbol *symbol_search(const(char)* );
void symbol_tree_hydrate(Symbol **ps);
void symbol_tree_dehydrate(Symbol **ps);
Symbol *symbol_hydrate(Symbol **ps);
void symbol_dehydrate(Symbol **ps);

Classsym *Classsym_hydrate(Classsym **ps)
{
    return cast(Classsym *) symbol_hydrate(cast(Symbol **)ps);
}

void Classsym_dehydrate(Classsym **ps)
{
    symbol_dehydrate(cast(Symbol **)ps);
}

void symbol_symdefs_dehydrate(Symbol **ps);
void symbol_symdefs_hydrate(Symbol **ps,Symbol **parent,int flag);
void symboltable_hydrate(Symbol *s, Symbol **parent);
void symboltable_clean(Symbol *s);
void symboltable_balance(Symbol **ps);
Symbol *symbol_membersearch(const(char)* id);
void symbol_gendebuginfo();

/* template.c */
int template_getcmd(char *);
void template_declaration(Classsym *stag, uint access_specifier);
void template_instantiate();
type *template_expand_type(Symbol *s);
Classsym *template_expand(Symbol *s, int flag);
void template_instantiate_forward(Classsym *stag);
param_t *template_gargs(Symbol *s);
param_t *template_gargs2(Symbol *s);
void template_createsymtab(param_t *pt , param_t *p);
void template_deletesymtab();
Symbol *template_createsym(const(char)* id, type *t, Symbol **proot);
char *template_mangle(Symbol *s , param_t *arglist);
Symbol *template_matchfunc(Symbol *stemp, param_t *pl, int, match_t, param_t *ptal, Symbol *stagfriend = null);
Symbol *template_matchfunctempl(Symbol *sfunc, param_t *ptali, type *tf, Symbol *stagfriend = null, int flags = 1);
int template_match_expanded_type(type *ptyTemplate, param_t *ptpl, param_t *ptal, type *ptyActual,
        type *ptyFormal );
bool template_classname(char *vident, Classsym *stag);
void template_free_ptal(param_t *ptal);
int template_function_leastAsSpecialized(Symbol *f1, Symbol *f2, param_t *ptal);
version (SCPP)
{
    Match template_matchtype(type *tp,type *te,elem *ee,param_t *ptpl, param_t *ptal, int flags);
    Match template_deduce_ptal(type *tthis, Symbol *sfunc, param_t *ptali,
        Match *ma, int flags, param_t *pl, param_t **pptal);
}
version (HTOD)
{
    Match template_matchtype(type *tp,type *te,elem *ee,param_t *ptpl, param_t *ptal, int flags);
    Match template_deduce_ptal(type *tthis, Symbol *sfunc, param_t *ptali,
        Match *ma, int flags, param_t *pl, param_t **pptal);
}
void template_function_verify(Symbol *sfunc, list_t arglist, param_t *ptali, int matchStage);
int template_arglst_match(param_t *p1, param_t *p2);
type * template_tyident(type *t,param_t *ptal,param_t *ptpl, int flag);

void tmf_free(TMF *tmf);
void tmf_hydrate(TMF **ptmf);
void tmf_dehydrate(TMF **ptmf);

void tme_free(TME *tme);
void tme_hydrate(TME **ptme);
void tme_dehydrate(TME **ptme);

void tmne_free(TMNE *tmne);
void tmne_hydrate(TMNE **ptmne);
void tmne_dehydrate(TMNE **ptmne);

void tmnf_free(TMNF *tmnf);
void tmnf_hydrate(TMNF **ptmnf);
void tmnf_dehydrate(TMNF **ptmnf);

extern __gshared symlist_t template_ftlist;       // list of template function symbols
extern __gshared Symbol *template_class_list;
extern __gshared Symbol **template_class_list_p;
version (PUBLIC_EXT)
{
    extern __gshared short template_expansion;
}

// from htod.c
void htod_init(const(char)* name);
void htod_term();
bool htod_running();
void htod_include(const(char)* p, int flag);
void htod_include_pop();
void htod_writeline();
void htod_define(macro_t *m);
void htod_decl(Symbol *s);

// from token.c
extern __gshared char *Arg;

/* tytostr.c    */
char *type_tostring(Outbuffer *,type *);
char *param_tostring(Outbuffer *,type *);
char *arglist_tostring(Outbuffer *,list_t el);
char *ptpl_tostring(Outbuffer *, param_t *ptpl);
char *el_tostring(Outbuffer *, elem *e);

extern __gshared phstring_t pathlist;   // include paths
extern __gshared int pathsysi;          // pathlist[pathsysi] is start of -isystem=
extern __gshared list_t headers;        // pre-include files

extern __gshared int structalign;       // alignment for members of structures
extern __gshared char dbcs;
extern __gshared int colnumber;         // current column number
extern __gshared int xc;                // character last read
extern __gshared phstring_t fdeplist;
extern __gshared char *fdepname;
extern (C) extern __gshared FILE *fdep;
extern __gshared char* flstname,fsymname,fphreadname,ftdbname;
extern (C) extern __gshared FILE *flst;

// htod
extern __gshared char *fdmodulename;
extern (C) extern __gshared FILE *fdmodule;

version (SPP)
{
    extern (C) extern __gshared FILE *fout;
}

extern __gshared uint idhash;        // hash value of identifier

extern __gshared int level;     // declaration level
                                // -2: base class list
                                // -1: class body
                                // 0: top level
                                // 1: function parameter declarations
                                // 2: function local declarations
                                // 3+: compound statement decls

extern __gshared Symbol *symlinkage;              // symbol linkage table
extern __gshared param_t *paramlst;               // function parameter list

